# langgraph-fastapi-mcp-server-demo

./: .gitignore  README.md  chatbot.py  pyproject.toml  shopping_list.db
server/: alembic.ini  crud.py  database.py  main.py  models.py  schemas.py  shopping_list.db
server/alembic/: env.py
server/alembic/versions/: 6ff8139a5180_initial_migration.py
